--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 <section><h2>Trustee Contact</h2>
 <ul class="contact-list"><li><strong>Name:</strong> Trustee (appointed)</li>
 <li><strong>Phone (WhatsApp):</strong> +233550562570</li>
-<li><strong>Note:</strong> Trustee currently does not have an email. You (owner) will receive notifications.</li></ul></section>
+<li><strong>Note:</strong> Trustee ✉️ miftaahmenk@gmail.com</li></ul></section>
 <section><h2>Transparency</h2><p>No payment information is stored on this site. All resources are free and shared for knowledge.</p></section>
 </main>
 <footer class="footer"><a href="index.html">Home</a><a href="library.html">Library</a><a href="about.html">About</a><a href="contact.html">Contact</a></footer>
