--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <div><h1 style="margin:0;color:#043">Contact</h1><nav><a href="index.html">Home</a><a href="library.html">Library</a><a href="about.html">About</a></nav></div></header>
 <main>
 <section><h2>Primary Contact (Owner)</h2>
-<ul class="contact-list"><li><strong>Name:</strong> Suliman (Sulley Alhassan)</li>
+<ul class="contact-list"><li><strong>Name:</strong> Suliman </li>
 <li><strong>Email:</strong> <a href="mailto:sulleyalhassan.178.as@gmail.com">sulleyalhassan.178.as@gmail.com</a></li>
 <li><strong>Phone (WhatsApp):</strong> +2330599931348</li></ul></section>
 <section><h2>Trustee Contact</h2>
