--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
 <main>
 <section><h2>Primary Contact (Owner)</h2>
 <ul class="contact-list"><li><strong>Name:</strong> Suliman </li>
-<li><strong>Email:</strong> <a href="mailto:sulleyalhassan.178.as@gmail.com">sulleyalhassan.178.as@gmail.com</a></li>
-<li><strong>Phone (WhatsApp):</strong> +2330599931348</li></ul></section>
+<li>Email: <a href="mailto:sulleyalhassan.178.as@gmail.com">sulleyalhassan.178.as@gmail.com</a></li>
+<li>WhatsApp: <a href="https://wa.me/233599931348">+0599931348</a></li>
 <section><h2>Transparency</h2><p>No payment information is stored on this site. All resources are free and shared for knowledge.</p></section>
 </main>
 <footer class="footer"><a href="index.html">Home</a><a href="library.html">Library</a><a href="about.html">About</a><a href="contact.html">Contact</a></footer>
